# puccinia-photo-manager

./: .gitignore  README.md  mix.exs  notes.txt  start_postgres.sh
assets/: build.mjs  package-lock.json  package.json
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: puccinia_photo_manager.ex  puccinia_photo_manager_web.ex
lib/puccinia_photo_manager/: application.ex  nif.ex  repo.ex
lib/puccinia_photo_manager_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/puccinia_photo_manager_web/controllers/: page_controller.ex
lib/puccinia_photo_manager_web/templates/layout/: root.html.heex
lib/puccinia_photo_manager_web/templates/page/: index.html.heex
lib/puccinia_photo_manager_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
native/pucciniaphotomanager_rs/: Cargo.toml
native/pucciniaphotomanager_rs/src/: lib.rs  logic.rs  nif.rs  wasm.rs
priv/repo/: seeds.exs
test/: test_helper.exs
test/puccinia_photo_manager_web/controllers/: page_controller_test.exs
test/puccinia_photo_manager_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
