[package]
authors = []
edition = "2018"
name = "pucciniaphotomanager_rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pucciniaphotomanager_rs"
path = "src/lib.rs"

[dependencies]
kamadak-exif = "0.5.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustler = "0.22.0"
rustler_sys = "2.1.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.63"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
